# its-compiler-python

./: .blobify  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  1.7.0,  README.md  SECURITY.md  __init__.py  cli.py  compiler.py  conditional_evaluator.py  models.py  pyproject.toml  schema_loader.py  test_runner.py  variable_processor.py
.github/workflows/: test.yml
its_compiler/: __init__.py  cli.py  compiler.py  conditional_evaluator.py  exceptions.py  models.py  schema_loader.py  test_runner.py  variable_processor.py
its_compiler/cli/: __init__.py  main.py
its_compiler/config/: schema_allowlist_template.json  security_defauts.json
its_compiler/core/: __init__.py  compiler.py  conditional_evaluator.py  exceptions.py  models.py  schema_loader.py  variable_processor.py
its_compiler/security/: __init__.py  allowlist_manager.py  config.py  expression_sanitiser.py  input_validator.py  url_validator.py
test/: conftest.py
test/core/: test_compiler_edge_cases.py  test_conditional_evaluation.py  test_configuration_models.py  test_exception_handling.py  test_variable_resolution.py
test/integration/: __init__.py  conftest.py  test_compilation_integration.py  test_error_handling_integration.py  test_schema_loading_integration.py  test_template_fetcher.py  test_variable_processing_integration.py
test/security/: test_allowlist_manager.py  test_expression_sanitiser.py  test_input_validator.py  test_security_integration.py  test_url_validator.py
test/templates/: 02-single-placeholder.json  03-multiple-placeholders.json  04-simple-variables.json  05-complex-variables.json  06-simple-conditionals.json  07-complex-conditionals.json  08-custom-types.json  09-array-usage.json  10-comprehensive-conditionals.json
test/templates/invalid/: 01-invalid-json.json
test/variables/: complex-conditional-variables.json  conditional-minimal-variables.json  conditional-test-variables.json  custom-variables.json
