[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "its-compiler-python"
version = "0.1.0"
description = "Reference Python compiler for Instruction Template Specification (ITS) with comprehensive security features"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alexander Parker", email = "your-email@example.com" }]
maintainers = [{ name = "Alexander Parker", email = "your-email@example.com" }]
keywords = [
    "its",
    "instruction",
    "template",
    "specification",
    "ai",
    "prompt",
    "compilation",
    "nlp",
    "content-generation",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "jsonschema>=4.17.0",
    "watchdog>=3.0.0",
    "pydantic>=1.10.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",

    # Security testing
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "semgrep>=1.0.0",

    # Code quality
    "black>=22.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pylint>=2.15.0",

    # Documentation
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.18.0",

    # Development tools
    "pre-commit>=3.0.0",
    "tox>=4.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

security = [
    # Additional security libraries for enhanced protection
    "cryptography>=38.0.0",
    "pyotp>=2.8.0",
    "passlib>=1.7.0",
    "bcrypt>=4.0.0",
]

monitoring = [
    # Monitoring and observability
    "prometheus-client>=0.15.0",
    "structlog>=22.0.0",
    "sentry-sdk>=1.15.0",
]

all = ["its-compiler-python[dev,security,monitoring]"]

[project.urls]
Homepage = "https://github.com/alexanderparker/its-compiler-python"
Documentation = "https://its-compiler-python.readthedocs.io/"
Repository = "https://github.com/alexanderparker/its-compiler-python.git"
Changelog = "https://github.com/alexanderparker/its-compiler-python/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/alexanderparker/its-compiler-python/issues"
"Security Policy" = "https://github.com/alexanderparker/its-compiler-python/security/policy"

[project.scripts]
its-compile = "its_compiler.cli:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["its_compiler*"]
exclude = ["test*", "docs*", "examples*"]

[tool.setuptools.package-data]
its_compiler = ["config/*.json", "security/*.json", "py.typed"]

# Testing Configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=its_compiler",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "--timeout=30",
]
testpaths = ["test"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: marks tests as security-focused",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "network: marks tests that require network access",
]
filterwarnings = ["error", "ignore::UserWarning", "ignore::DeprecationWarning"]

# Security Configuration
[tool.bandit]
exclude_dirs = ["test", "docs"]
skips = ["B101", "B601"]        # Skip assert_used and shell injection in tests

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

# Code Quality Configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["its_compiler", "test"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["rich.*", "watchdog.*", "requests.*"]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 10
max-branches = 15
max-statements = 50

# Coverage Configuration
[tool.coverage.run]
source = ["its_compiler"]
omit = [
    "*/test*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/dist-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Tox Configuration for Multiple Environment Testing
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312,security,docs,lint
isolated_build = true

[testenv]
deps = 
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    pytest-timeout>=2.1.0
commands = 
    pytest {posargs}

[testenv:security]
deps = 
    bandit[toml]>=1.7.0
    safety>=2.3.0
    semgrep>=1.0.0
commands = 
    bandit -r its_compiler -f json -o bandit-report.json
    safety check --json --output safety-report.json
    # semgrep --config=auto --json --output=semgrep-report.json its_compiler/

[testenv:docs]
deps = 
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.2.0
    myst-parser>=0.18.0
commands = 
    sphinx-build -W -b html docs docs/_build/html

[testenv:lint]
deps = 
    black>=22.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
    pylint>=2.15.0
commands = 
    black --check its_compiler test
    isort --check-only its_compiler test
    flake8 its_compiler test
    mypy its_compiler
    pylint its_compiler

[testenv:integration]
commands = 
    python test_runner.py --verbose

[testenv:security-tests]
commands = 
    python test_runner.py --security-only --verbose
"""

# Note: Pre-commit configuration should be in .pre-commit-config.yaml file
# This is included here for reference but should be moved to a separate file
